[package]
name = "BrawleyBall"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15"
bevy_ggrs = "0.17"
bevy_matchbox = { version = "0.11.0", features = ["ggrs"] }
bytemuck = "1.23"
bevy_asset_loader = "0.23.0-rc.3"
serde = { version = "1.0", features = ["derive"] }
avian2d = { version = "0.2", default-features = false, features = ["2d", "f32", "parry-f32", "enhanced-determinism"] }
